# conversational-computer

./: .gitignore  CLAUDE.md  README.md  run_canvas.sh
docs/: ARCHITECTURE.md  BLOCKS_AND_SDK.md  CURRENT_STATUS.md  IMPLEMENTATION_STATUS.md  PRAGMATIC_ARCHITECTURE.md  PROGRESS.md  canvas-compositor-implementation.md  conversational-computer-spec.md  system-baseline.md
src/: debug_spoc.py  main.py  simple_test.py  test_cli.py
src/canvas/: .gitignore  Cargo.toml  build.sh  compositor.py  run_canvas.sh  simple_canvas.py  test_drm.sh  test_input.rs  test_standalone.rs
src/canvas/src/: font.rs  improved_input.rs  input.rs  main.rs  main_drm.rs  main_drm_backup.rs  main_drm_direct.rs  main_drm_simple.rs  main_smithay.rs  spoc_client.rs  text_field.rs
src/canvas_v2/: Cargo.toml
src/canvas_v2/src/: animation.rs  canvas.rs  input_field.rs  keybindings.rs  main.rs  message.rs  spoc_input.rs
src/conductor/: conductor.py  mock_conductor.py  server.py  spoc_server.py  test_basic.py
