[package]
name = "canvas"
version = "0.1.0"
edition = "2021"
authors = ["nidhishgajjar <hacker@scigic.com>"]
description = "Canvas - Minimal Wayland compositor for Conversational Computer"

[dependencies]
# Smithay will be added when we implement full compositor
# For now, keeping it minimal to test the structure

[profile.release]
lto = true
codegen-units = 1
opt-level = 3