[package]
name = "canvas"
version = "0.1.0"
edition = "2021"
authors = ["nidhishgajjar <hacker@scigic.com>"]
description = "Canvas - Minimal Wayland compositor for Conversational Computer"

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3