[package]
name = "canvas"
version = "0.2.0"
edition = "2021"

[dependencies]
# Rendering
skia-safe = { version = "0.75", features = ["gl"] }

# Window management (temporary until we go framebuffer)
winit = "0.29"
glutin = "0.31"
glutin-winit = "0.4"
raw-window-handle = "0.6"

# Text handling
unicode-segmentation = "1.10"

# Async for SPOC communication  
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time for animations
instant = "0.1"

# Math for animations
nalgebra = "0.32"

# UUID for message IDs
uuid = { version = "1.6", features = ["v4"] }

# OpenGL
gl = "0.14"